--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
         <item name="android:textSize">@dimen/_12sdp</item>
     </style>
 
+    <style name="Theme.MarketApp.categoryTitle" parent="TextAppearance.Material3.LabelLarge">
+        <item name="fontFamily">@font/BRoya</item>
+        <item name="android:fontFamily">@font/BRoya</item>
+    </style>
+
 </resources>
