fix(layouts): Use another font and apply changes

--- a/app/src/main/res/layout/product_category_item_view.xml
+++ b/app/src/main/res/layout/product_category_item_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/_150sdp"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginEnd="@dimen/space_medium">
 
 
@@ -39,7 +39,7 @@
         android:layout_marginTop="@dimen/_16sdp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="?attr/textAppearanceBody1"
+        android:textAppearance="@style/Theme.MarketApp.SmallTitle"
         app:layout_constraintEnd_toEndOf="@id/glv_end"
         app:layout_constraintStart_toStartOf="@id/glv_start"
         app:layout_constraintTop_toBottomOf="@id/glh_half_screen"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_8sdp"
         android:text="@string/remaining_stocks"
-        android:textAppearance="?attr/textAppearanceBodySmall"
+        android:textAppearance="@style/Theme.MarketApp.SmallBody"
         android:textColor="?attr/colorError"
         app:layout_constraintEnd_toStartOf="@id/glv_end"
         app:layout_constraintStart_toEndOf="@id/glv_start"
@@ -64,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:textAppearance="?attr/textAppearanceBody2"
+        android:textAppearance="@style/Theme.MarketApp.SmallBody"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/product_discount"
         app:layout_constraintHorizontal_bias="0.8"
@@ -82,7 +82,7 @@
         android:background="@drawable/product_discount_background"
         android:paddingHorizontal="@dimen/_8sdp"
         android:paddingVertical="@dimen/_4sdp"
-        android:textAppearance="?attr/textAppearanceBody2"
+        android:textAppearance="@style/Theme.MarketApp.SmallBody"
         android:textColor="?attr/colorOnError"
         app:layout_constraintBottom_toBottomOf="@+id/product_price"
         app:layout_constraintEnd_toEndOf="@id/glv_end"
