refactor(layout): Add id to categories recyclerView

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,6 +24,7 @@
             android:layout_height="100dp" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/product_categories"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
