--- a/app/src/main/res/layout/product_category_view.xml
+++ b/app/src/main/res/layout/product_category_view.xml
@@ -38,7 +38,7 @@
             tools:text="مشاهده همه" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/product_categories"
+            android:id="@+id/products"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginVertical="@dimen/space_small"
