feat(view): Show text on 'show more' text view

--- a/app/src/main/res/layout/product_category_view.xml
+++ b/app/src/main/res/layout/product_category_view.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/space_small"
-    android:elevation="@dimen/space_small"
     app:cardCornerRadius="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,6 +32,7 @@
             android:layout_marginStart="@dimen/space_medium"
             android:textColor="?attr/colorAccent"
             android:textStyle="bold"
+            android:text="@string/show_all"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="مشاهده همه" />
@@ -43,8 +43,8 @@
             android:layout_height="match_parent"
             android:layout_marginVertical="@dimen/space_small"
             android:clipToPadding="false"
+            app:reverseLayout="true"
             android:orientation="horizontal"
-            android:paddingStart="@dimen/space_medium"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,4 +53,4 @@
             tools:listitem="@layout/product_category_item_view" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.google.android.material.card.MaterialCardView>
+</FrameLayout>
