--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,5 +20,11 @@
         <item name="android:textSize">@dimen/_10sdp</item>
     </style>
 
+    <style name="Widget.Market" parent="@android:style/Widget.Material" />
+    
+    <style name="Widget.Market.AppBar" parent="@style/Widget.Material3.AppBarLayout">
+        <item name="android:background">?attr/colorSurface</item>
+    </style>
+
 
 </resources>
